TYPE(FIX): Hide horizontal scrollbar
When fade-in animation was triggered, horizontal scrollbar would show up. Basic
CSS change fixes that problem.

--- a/source/style.css
+++ b/source/style.css
@@ -6,7 +6,8 @@
 	bottom:      30px;
 	width:       100%;
 	box-shadow:  0px 0px 30px rgba(0, 0, 0, 0.5);
-	overflow:    auto;
+	overflow-y:  auto;
+	overflow-x:  hidden;
 }
 
 .animate .Layer {
